force-app/main/default/objects/ssot__ProductServiceCampaign__dlm/fields/ssot__ProductServiceCampaignStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductServiceCampaignStatus__c</fullName>
    <label>Product Service Campaign Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductServiceCampaignStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>