force-app/main/default/objects/ssot__ProductServiceCampaign__dlm/fields/ssot__ProductServiceCmpnStatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductServiceCmpnStatusCategory__c</fullName>
    <label>Product Service Cmpn Status Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductServiceCmpnStatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>