force-app/main/default/objects/ssot__ProductServiceCampaign__dlm/fields/ssot__rel_1705061035084_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061035084_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductServiceCampaign_WorkTypeId_ma_rel</label>
    <referenceTo>ssot__WorkType__dlm</referenceTo>
    <relationshipLabel>ProductServiceCampaign_WorkTypeId_ma_rel</relationshipLabel>
    <relationshipName>rel_1705061035084_end</relationshipName>
    <type>Lookup</type>
</CustomField>