force-app/main/default/objects/ssot__ProductServiceCampaign__dlm/fields/ssot__rel_1705061038270_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061038270_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductServiceCampaign_CreatedById_m_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ProductServiceCampaign_CreatedById_m_rel</relationshipLabel>
    <relationshipName>rel_1705061038270_end</relationshipName>
    <type>Lookup</type>
</CustomField>